(lang dune 3.0)
(name sisyphus)
(using menhir 2.1)
(using coq 0.3)
(package
 (name sisyphus)
 (synopsis "Sisyphus is an automated tool for proof repair")
 (description
   "Sisyphus is an automated tool for proof repair.")
 (depends
  (ocaml (>= 4.12.0))
  ;; note: the following equal dependencies are important, due to a buggy opam file for coq-serapi
  (cmdliner (= 1.0.4))
  (sexplib0 (= v0.14.0))
  (ppx_sexp_conv (= v0.14.3))
  (coq (>= 8.15.1))
  (coq-serapi (>= 8.15.0+0.15.0))
  (coq-cfml (>= 20220112))
  (coq-cfml-basis (>= 20220112))
  (cfml (>= 20220112))
  (containers (>= 3.7))
  (nottui (>= 0.2))
  (iter (>= 1.4))
  (bos (>= 0.2.1))
  (alcotest (>= 1.5.0))
  (z3 (>= 4.8.14))
  (sedlex (>= 2.5))
  (ppx_blob (>= 0.7.2))
  (ptime (>= 1.0.0))
))
(generate_opam_files true)
(license AGPL-3.0+)
(source (uri git+https://github.com/verse-lab/proof-repair.git))
(bug_reports https://github.com/verse-lab/proof-repair/issues)
(homepage https://github.com/verse-lab/proof-repair)
(authors "..")
(maintainers "kirang@comp.nus.edu.sg")
(documentation sisyphus)
