(tests
 (names test_verification test_proof_lexer test_proof_parser test_program_parser)
 (modules (:standard \ "testing_utils"))
 (libraries proof_parser program_parser program testing_utils alcotest containers)
 (preprocess (pps ppx_deriving.std))
)

(library (name testing_utils)
 (modules testing_utils)
 (libraries alcotest))
