(executable
 (name web)
 (modes js)
 (ocamlc_flags -g)
 (flags -g)
 (preprocess (pps js_of_ocaml-ppx ppx_deriving.std))
 (libraries
   proof_parser

   bulma      ;; BULMA Css library

   containers ;; standard library
   brr        ;;
   tyxml
   js_of_ocaml
   js_of_ocaml-tyxml
))

(alias
 (name default)
 (deps
  (glob_files *.html) (glob_files *.css)
   web.bc.js))


