(executable
 (name table)
 (libraries alcotest bos containers benchmark_utils gen_utils)
 (preprocess (pps ppx_deriving.std)))

(rule
  (target foo.txt)
 (deps ../../bin/main.exe (glob_files_rec ../../resources/*.{ml,v}) (glob_files_rec ../../resources/_CoqProject))
  (action (run touch foo.txt))
)
