(executable
 (name table)
 (libraries alcotest bos containers ptime ptime.clock.os str gen_utils)
 (preprocess (pps ppx_deriving.std)))

(rule
  (target foo.txt)
  (deps ./template.tex ../../bin/main.exe (glob_files_rec ../../resources/*.{ml,v}) (glob_files_rec ../../resources/_CoqProject))
  (action (run touch foo.txt))
)
