(executable
 (name table)
 (libraries alcotest bos containers ptime ptime.clock.os str iter gen_utils)
 (preprocess (pps ppx_deriving.std)))

(rule
  (target dummy.txt)
  (deps  ../../bin/main.exe (glob_files_rec ../../resources/*.{ml,v}) (glob_files_rec ../../resources/_CoqProject))
  (action (run touch dummy.txt))
)
