(library (name dynamic)
 (modules (:standard \ "main" "sisyphus_tracing"))
 (preprocess (pps ppx_deriving.std ppx_deriving.ord))
 (libraries sisyphus_tracing lang bos containers iter))

(library (name sisyphus_tracing)
 (modules sisyphus_tracing))

(executable (name main)
 (modules main)
  (preprocess (pps ppx_blob))
 (libraries dynamic
            containers
            dynlink ocaml-compiler-libs.common
            ocaml-compiler-libs.optcomp
            ; ocaml-compiler-libs.bytecomp
            lang))


