(library (name dynamic)
 (modules (:standard \ "main" "sisyphus_tracing"))
 (preprocess (staged_pps ppx_blob ppx_deriving.std ppx_deriving.ord ppx_import))
 (libraries
   lang
   sisyphus_tracing
   bos
   containers iter
   dynlink ocaml-compiler-libs.common
   ocaml-compiler-libs.optcomp
))

(library (name sisyphus_tracing)
 (modules sisyphus_tracing))

(executable (name main)
 (modules main)
  (preprocess (pps ppx_blob))
 (libraries dynamic
            containers
            dynlink ocaml-compiler-libs.common
            ocaml-compiler-libs.optcomp
            lang))


