(library (name dynamic)
 (public_name sisyphus.dynamic)
 (modules (:standard \ "main" "sisyphus_tracing"))
 (preprocess (staged_pps ppx_blob ppx_deriving.std ppx_deriving.ord ppx_import))
 (preprocessor_deps (file sisyphus_tracing.ml))
 (libraries
   lang
   sisyphus_tracing
   bos
   containers iter
   dynlink ocaml-compiler-libs.common
   ocaml-compiler-libs.optcomp
))

(library (name sisyphus_tracing)
 (public_name sisyphus.tracing)
 (modules sisyphus_tracing))

(executable (name main)
 (modules main)
  (preprocess (pps ppx_blob))
 (libraries dynamic
            containers
            dynlink ocaml-compiler-libs.common
            ocaml-compiler-libs.optcomp
            lang))


