(library
 (name program_parser)
 (modules (:standard \ "main"))
 (preprocess (pps ppx_deriving.std))
 (libraries containers compiler-libs.common program))

(executable (name main)
 (modules "main")
 (preprocess (pps ppx_deriving.std))
 (libraries containers compiler-libs.common program_parser program))
