(library (name proof_analysis)
 (public_name sisyphus.proof_analysis)
 (modules (:standard \ "main"))
 (flags  -rectypes)
 (preprocess (pps ppx_deriving.std))
 (libraries coq lang compiler-libs.common proof_validator proof_utils proof_spec proof_reduction dynamic containers)
)

(executable (name main)
 (modules main)
 (flags  -rectypes)
 (libraries proof_generator lang dynamic containers))
