(library (name proof_generator)
 (public_name sisyphus.proof_generator)
 (modules (:standard \ "main"))
 (flags  -rectypes)
 (preprocess (pps ppx_deriving.std))
 (libraries
   coq
   utils
   lang
   proof_utils
   expr_generator
   proof_parser
   proof_analysis
   proof_reduction
   proof_spec
   dynamic
   containers
   ptime ptime.clock.os
 )
)

(executable (name main)
 (modules main)
 (flags  -rectypes)
 (libraries proof_generator lang dynamic containers))
