(library (name proof_parser)
 (public_name sisyphus.proof_parser)
 (libraries  containers proof_spec lang coq)
 (modules (:standard \ "main"))
 (flags  -rectypes)
 (preprocess (pps ppx_deriving.std)))

(executable (name main)
 (modules main)
 (flags -rectypes)
 (libraries proof_parser proof_spec containers iter))
 
