(library
 (name proof_synthesis)
 (modules (:standard \ "main"))
 (preprocess (pps ppx_deriving.std))
 (libraries containers bos program program_parser synthesis proof_parser))

(executable (name main)
 (modules "main")
 (preprocess (pps ppx_deriving.std))
 (libraries pcre proof_synthesis program program_parser proof_parser))
