(library (name array_exists)
  (libraries common))

(coq.theory
 (name ProofsArrayExists)
 (modules
   Array_exists_old_ml Verify_array_exists_old
   Array_exists_new_ml Verify_array_exists_new
   Dummy)
 (libraries sisyphus.plugin)
 (flags -R resources/common Common)
)

(include build-rules.sexp)
(rule (with-stdout-to build-rules.sexp.gen (run ../../scripts/gen_build_rules.sh)))
(rule (alias gen-build-rules) (action (diff build-rules.sexp build-rules.sexp.gen)))


(env
  (dev
    (flags (:standard -w -32))))
