(library (name array_exists2)
  (libraries common))

(coq.theory
 (name ProofsArrayExists2)
 (modules
   Common_ml
   array_exists2_old_ml Verify_array_exists2_old
   array_exists2_new_ml Verify_array_exists2_new)
 (libraries sisyphus.plugin)
 (flags -R resources/common Common))

(include build-rules.sexp)
(rule (with-stdout-to build-rules.sexp.gen (run ../../scripts/gen_build_rules.sh)))
(rule (alias gen-build-rules) (action (diff build-rules.sexp build-rules.sexp.gen)))

(env
  (dev
    (flags (:standard -w -32))))
