(library (name array_find)
  (modules common)
)

(coq.theory
 (name ProofsArrayFind)
 (modules
   Common_ml
   Verify_array_find_utils
   array_find_old_ml Verify_array_find_old
   array_find_new_ml Verify_array_find_new)
 (libraries sisyphus.plugin)
)


(rule
 (targets Common_ml.v common.cmj)
 (deps common.ml)
 (action (run cfmlc -o ./Common_ml.v common.ml)))

(rule
 (target array_find_old.sisyphus.ml)
 (deps array_find_old.ml)
 (action (with-stdout-to array_find_old.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" array_find_old.ml))))

(rule
 (target array_find_old_ml.v)
 (deps array_find_old.sisyphus.ml common.ml common.cmj)
 (action (run cfmlc -o ./array_find_old_ml.v array_find_old.sisyphus.ml)))

(rule
 (target array_find_new.sisyphus.ml)
 (deps array_find_new.ml)
 (action (with-stdout-to array_find_new.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" ./array_find_new.ml))))

(rule
 (target array_find_new_ml.v)
 (deps array_find_new.sisyphus.ml common.ml common.cmj Common_ml.v)
 (action (run cfmlc -o ./array_find_new_ml.v array_find_new.sisyphus.ml)))

(env
  (dev
    (flags (:standard -w -32))))
