(library (name array_find_map)
  (modules common)
)

(coq.theory
 (name ProofsArrayFindMap)
 (modules
   Common_ml
   Verify_array_find_map_utils
   array_find_map_old_ml Verify_array_find_map_old
   array_find_map_new_ml Verify_array_find_map_new)
 (libraries sisyphus.plugin)
 (flags -R resources/common Common))

(include build-rules.sexp)
(rule (with-stdout-to build-rules.sexp.gen (run ../../scripts/gen_build_rules.sh)))
(rule (alias gen-build-rules) (action (diff build-rules.sexp build-rules.sexp.gen)))

(rule
 (targets Common_ml.v common.cmj)
 (deps common.ml)
 (action (run cfmlc -o ./Common_ml.v common.ml)))

(rule
 (target array_find_map_old.sisyphus.ml)
 (deps array_find_map_old.ml)
 (action (with-stdout-to array_find_map_old.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" array_find_map_old.ml))))

(rule
 (target array_find_map_old_ml.v)
 (deps array_find_map_old.sisyphus.ml common.ml common.cmj)
 (action (run cfmlc -o ./array_find_map_old_ml.v array_find_map_old.sisyphus.ml)))

(rule
 (target array_find_map_new.sisyphus.ml)
 (deps array_find_map_new.ml)
 (action (with-stdout-to array_find_map_new.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" ./array_find_map_new.ml))))

(rule
 (target array_find_map_new_ml.v)
 (deps array_find_map_new.sisyphus.ml common.ml common.cmj Common_ml.v)
 (action (run cfmlc -o ./array_find_map_new_ml.v array_find_map_new.sisyphus.ml)))

(env
  (dev
    (flags (:standard -w -32))))
