(library (name array_findi)
  (libraries common))

(coq.theory
 (name ProofsArrayFindi)
 (modules
   Array_findi_old_ml Verify_array_findi_old
   Array_findi_new_ml Verify_array_findi_new)
 (libraries sisyphus.plugin)
 (flags -R resources/common Common))

(include build-rules.sexp)
(rule (with-stdout-to build-rules.sexp.gen (run ../../scripts/gen_build_rules.sh)))
(rule (alias gen-build-rules) (action (diff build-rules.sexp build-rules.sexp.gen)))

(env
  (dev
    (flags (:standard -w -32))))
