(library (name array_foldi)
  (libraries common))

(coq.theory
 (name ProofsArrayFoldi)
 (modules
   Array_foldi_old_ml Verify_array_foldi_old
   Array_foldi_new_ml Verify_array_foldi_new
   Dummy)
 (libraries sisyphus.plugin)
 (flags -R resources/common Common))

(include build-rules.sexp)
(rule (with-stdout-to build-rules.sexp.gen (run ../../scripts/gen_build_rules.sh)))
(rule (alias gen-build-rules) (action (diff build-rules.sexp build-rules.sexp.gen)))

(env
  (dev
    (flags (:standard -w -32))))
