(library (name array_is_sorted)
  (modules common)
)

(coq.theory
 (name ProofsArrayIsSorted)
 (modules
   Common_ml
   Verify_array_is_sorted_utils
   Array_is_sorted_old_ml Verify_array_is_sorted_old
   Array_is_sorted_new_ml Verify_array_is_sorted_new)
 (libraries sisyphus.plugin)
)


(rule
 (targets Common_ml.v common.cmj)
 (deps common.ml)
 (action (run cfmlc -o ./Common_ml.v common.ml)))

(rule
 (target array_is_sorted_old.sisyphus.ml)
 (deps array_is_sorted_old.ml)
 (action (with-stdout-to array_is_sorted_old.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" array_is_sorted_old.ml))))

(rule
 (target Array_is_sorted_old_ml.v)
 (deps array_is_sorted_old.sisyphus.ml common.ml common.cmj)
 (action (run cfmlc -o ./Array_is_sorted_old_ml.v array_is_sorted_old.sisyphus.ml)))

(rule
 (target array_is_sorted_new.sisyphus.ml)
 (deps array_is_sorted_new.ml)
 (action (with-stdout-to array_is_sorted_new.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" ./array_is_sorted_new.ml))))

(rule
 (target Array_is_sorted_new_ml.v)
 (deps array_is_sorted_new.sisyphus.ml common.ml common.cmj Common_ml.v)
 (action (run cfmlc -o ./Array_is_sorted_new_ml.v array_is_sorted_new.sisyphus.ml)))

(env
  (dev
    (flags (:standard -w -32))))
