(library (name array_map2)
  (modules common)
)

(coq.theory
 (name ProofsArrayMap2)
 (modules
   Common_ml
   Verify_array_map2_utils
   array_map2_old_ml Verify_array_map2_old
   array_map2_new_ml Verify_array_map2_new)
 (libraries sisyphus.plugin)
)


(rule
 (targets Common_ml.v common.cmj)
 (deps common.ml)
 (action (run cfmlc -o ./Common_ml.v common.ml)))

(rule
 (target array_map2_old.sisyphus.ml)
 (deps array_map2_old.ml)
 (action (with-stdout-to array_map2_old.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" array_map2_old.ml))))

(rule
 (target array_map2_old_ml.v)
 (deps array_map2_old.sisyphus.ml common.ml common.cmj)
 (action (run cfmlc -o ./array_map2_old_ml.v array_map2_old.sisyphus.ml)))

(rule
 (target array_map2_new.sisyphus.ml)
 (deps array_map2_new.ml)
 (action (with-stdout-to array_map2_new.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" ./array_map2_new.ml))))

(rule
 (target array_map2_new_ml.v)
 (deps array_map2_new.sisyphus.ml common.ml common.cmj Common_ml.v)
 (action (run cfmlc -o ./array_map2_new_ml.v array_map2_new.sisyphus.ml)))

(env
  (dev
    (flags (:standard -w -32))))
