(library
 (name array_map2)
 (libraries common))

(coq.theory
 (name ProofsArrayMap2)
 (modules
   Array_map2_old_ml Verify_array_map2_old
   Array_map2_new_ml Verify_array_map2_new
   Dummy
 )
 (libraries sisyphus.plugin)
 (flags -R resources/common Common))


(include build-rules.sexp)
(rule (with-stdout-to build-rules.sexp.gen (run ../../scripts/gen_build_rules.sh)))
(rule (alias gen-build-rules) (action (diff build-rules.sexp build-rules.sexp.gen)))


(env
  (dev
    (flags (:standard -w -32 -w -26))))
