(library (name array_of_rev_list)
  (libraries common))

(coq.theory
 (name ProofsArrayOfRevList)
 (modules
   Array_of_rev_list_old_ml Verify_array_of_rev_list_old
   Array_of_rev_list_new_ml Verify_array_of_rev_list_new
   Dummy)
 (libraries sisyphus.plugin)
 (flags -R resources/common Common))

(include build-rules.sexp)
(rule (with-stdout-to build-rules.sexp.gen (run ../../scripts/gen_build_rules.sh)))
(rule (alias gen-build-rules) (action (diff build-rules.sexp build-rules.sexp.gen)))

(env
  (dev
    (flags (:standard -w -32))))
