(library (name array_of_rev_list_2)
  (modules common)
)

(coq.theory
 (name ProofsArrayOfRevList2)
 (modules
   Common_ml
   Verify_array_of_rev_list_utils
   Array_of_rev_list_old_ml Verify_array_of_rev_list_old
   Array_of_rev_list_new_ml Verify_array_of_rev_list_new)
 (libraries sisyphus.plugin)
)


(rule
 (targets Common_ml.v common.cmj)
 (deps common.ml)
 (action (run cfmlc -o ./Common_ml.v common.ml)))

(rule
 (target array_of_rev_list_old.sisyphus.ml)
 (deps array_of_rev_list_old.ml)
 (action (with-stdout-to array_of_rev_list_old.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" array_of_rev_list_old.ml))))

(rule
 (target Array_of_rev_list_old_ml.v)
 (deps array_of_rev_list_old.sisyphus.ml common.ml common.cmj)
 (action (run cfmlc -o ./Array_of_rev_list_old_ml.v array_of_rev_list_old.sisyphus.ml)))

(rule
 (target array_of_rev_list_new.sisyphus.ml)
 (deps array_of_rev_list_new.ml)
 (action (with-stdout-to array_of_rev_list_new.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" ./array_of_rev_list_new.ml))))

(rule
 (target Array_of_rev_list_new_ml.v)
 (deps array_of_rev_list_new.sisyphus.ml common.ml common.cmj Common_ml.v)
 (action (run cfmlc -o ./Array_of_rev_list_new_ml.v array_of_rev_list_new.sisyphus.ml)))

(env
  (dev
    (flags (:standard -w -32))))
