(library (name array_partition)
  (modules common)
)

(coq.theory
 (name ProofsArrayPartition)
 (modules
   Common_ml
   Verify_array_partition_utils
   array_partition_old_ml Verify_array_partition_old
   array_partition_new_ml Verify_array_partition_new)
 (libraries sisyphus.plugin)
)


(rule
 (targets Common_ml.v common.cmj)
 (deps common.ml)
 (action (run cfmlc -o ./Common_ml.v common.ml)))

(rule
 (target array_partition_old.sisyphus.ml)
 (deps array_partition_old.ml)
 (action (with-stdout-to array_partition_old.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" array_partition_old.ml))))

(rule
 (target array_partition_old_ml.v)
 (deps array_partition_old.sisyphus.ml common.ml common.cmj)
 (action (run cfmlc -o ./array_partition_old_ml.v array_partition_old.sisyphus.ml)))

(rule
 (target array_partition_new.sisyphus.ml)
 (deps array_partition_new.ml)
 (action (with-stdout-to array_partition_new.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" ./array_partition_new.ml))))

(rule
 (target array_partition_new_ml.v)
 (deps array_partition_new.sisyphus.ml common.ml common.cmj Common_ml.v)
 (action (run cfmlc -o ./array_partition_new_ml.v array_partition_new.sisyphus.ml)))

(env
  (dev
    (flags (:standard -w -32))))
