(library (name array_partition)
  (libraries common))

(coq.theory
 (name ProofsArrayPartition)
 (modules
   Array_partition_old_ml Verify_array_partition_old
   Array_partition_new_ml Verify_array_partition_new
   Dummy)
 (libraries sisyphus.plugin)
 (flags -R resources/common Common))

(include build-rules.sexp)
(rule (with-stdout-to build-rules.sexp.gen (run ../../scripts/gen_build_rules.sh)))
(rule (alias gen-build-rules) (action (diff build-rules.sexp build-rules.sexp.gen)))

(env
  (dev
    (flags (:standard -w -32))))
