(library (name array_rev_2)
  (modules common)
)

(coq.theory
 (name ProofsArrayRev2)
 (modules
   Common_ml
   Verify_array_rev_utils
   array_rev_old_ml Verify_array_rev_old
   array_rev_new_ml Verify_array_rev_new)
 (libraries sisyphus.plugin)
)


(rule
 (targets Common_ml.v common.cmj)
 (deps common.ml)
 (action (run cfmlc -o ./Common_ml.v common.ml)))

(rule
 (target array_rev_old.sisyphus.ml)
 (deps array_rev_old.ml)
 (action (with-stdout-to array_rev_old.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" array_rev_old.ml))))

(rule
 (target array_rev_old_ml.v)
 (deps array_rev_old.sisyphus.ml common.ml common.cmj)
 (action (run cfmlc -o ./array_rev_old_ml.v array_rev_old.sisyphus.ml)))

(rule
 (target array_rev_new.sisyphus.ml)
 (deps array_rev_new.ml)
 (action (with-stdout-to array_rev_new.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" ./array_rev_new.ml))))

(rule
 (target array_rev_new_ml.v)
 (deps array_rev_new.sisyphus.ml common.ml common.cmj Common_ml.v)
 (action (run cfmlc -o ./array_rev_new_ml.v array_rev_new.sisyphus.ml)))

(env
  (dev
    (flags (:standard -w -32))))
