(library (name array_sort_1)
  (modules common)
)

(coq.theory
 (name ProofsArraySort1)
 (modules
   Common_ml
   Verify_array_sort_1_utils
   array_sort_1_old_ml Verify_array_sort_1_old
   array_sort_1_new_ml Verify_array_sort_1_new)
 (libraries sisyphus.plugin)
)


(rule
 (targets Common_ml.v common.cmj)
 (deps common.ml)
 (action (run cfmlc -o ./Common_ml.v common.ml)))

(rule
 (target array_sort_1_old.sisyphus.ml)
 (deps array_sort_1_old.ml)
 (action (with-stdout-to array_sort_1_old.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" array_sort_1_old.ml))))

(rule
 (target array_sort_1_old_ml.v)
 (deps array_sort_1_old.sisyphus.ml common.ml common.cmj)
 (action (run cfmlc -o ./array_sort_1_old_ml.v array_sort_1_old.sisyphus.ml)))

(rule
 (target array_sort_1_new.sisyphus.ml)
 (deps array_sort_1_new.ml)
 (action (with-stdout-to array_sort_1_new.sisyphus.ml
          (run sed -E "s/\\[@.*\\]//" ./array_sort_1_new.ml))))

(rule
 (target array_sort_1_new_ml.v)
 (deps array_sort_1_new.sisyphus.ml common.ml common.cmj Common_ml.v)
 (action (run cfmlc -o ./array_sort_1_new_ml.v array_sort_1_new.sisyphus.ml)))

(env
  (dev
    (flags (:standard -w -32))))
