(library
 (name common)
 (public_name sisyphus.common)
 (wrapped false))

(coq.theory
 (name Common)
 (modules
   Verify_sseq Sseq_ml
   Verify_combinators Combinators_ml

   Verify_opt Opt_ml

   Verify_list Lst_ml

   Verify_arr Arr_ml

   Verify_vec Vec_ml

   Verify_sll Sll_ml

   Utils Tactics Solver))

(rule
 (targets Opt_ml.v opt.cmj)
 (deps opt.ml)
 (action (run cfmlc -o ./Opt_ml.v opt.ml)))

(rule
 (targets Arr_ml.v arr.cmj)
 (deps arr.ml)
 (action (run cfmlc -o ./Arr_ml.v arr.ml)))

(rule
 (targets Combinators_ml.v combinators.cmj)
 (deps combinators.ml)
 (action (run cfmlc -o ./Combinators_ml.v combinators.ml)))

(rule
 (targets Lst_ml.v lst.cmj)
 (deps lst.ml)
 (action (run cfmlc -o ./Lst_ml.v lst.ml)))

(rule
 (targets Sseq_ml.v sseq.cmj)
 (deps sseq.ml)
 (action (run cfmlc -o ./Sseq_ml.v sseq.ml)))

(rule
 (targets Sll_ml.v sll.cmj)
 (deps sll.ml)
 (action (run cfmlc -o ./Sll_ml.v sll.ml)))

(rule
 (targets Tree_ml.v tree.cmj)
 (deps tree.ml)
 (action (run cfmlc -o ./Tree_ml.v tree.ml)))

(rule
 (targets Vec_ml.v vec.cmj)
 (deps vec.ml)
 (action (run cfmlc -o ./Vec_ml.v vec.ml)))

(rule
 (target _output)
 (action (run mkdir -p _output)))

(env
 (dev
  (flags (:standard -w -32 -w -33))))
