(library
 (name find_mapi)
 (libraries common))

(coq.theory
 (name ProofsFindMapi)
 (modules
   Find_mapi_old_ml Verify_find_mapi_old
   Find_mapi_new_ml Verify_find_mapi_new
   Dummy
 )
 (libraries sisyphus.plugin)
 (flags -R resources/common Common))


(include build-rules.sexp)
(rule (with-stdout-to build-rules.sexp.gen (run ../../scripts/gen_build_rules.sh)))
(rule (alias gen-build-rules) (action (diff build-rules.sexp build-rules.sexp.gen)))


(env
  (dev
    (flags (:standard -w -32 -w -26))))
