(library
 (name hashtbl_invert)
 (libraries common))

(coq.theory
 (name ProofsHashtblInvert)
 (modules
   Hashtbl_invert_old_ml Verify_hashtbl_invert_old
   Hashtbl_invert_new_ml Verify_hashtbl_invert_new
   Dummy
 )
 (libraries sisyphus.plugin)
 (flags -R resources/common Common))


(include build-rules.sexp)
(rule (with-stdout-to build-rules.sexp.gen (run ../../scripts/gen_build_rules.sh)))
(rule (alias gen-build-rules) (action (diff build-rules.sexp build-rules.sexp.gen)))


(env
  (dev
    (flags (:standard -w -32 -w -26))))
